Fix JOGL